##
## $Id$
##

rtems_makedir = $(prefix)/make

dist_rtems_make_DATA = main.cfg leaf.cfg

EXTRA_DIST = host.cfg.in

rtems_make_Templatesdir = $(rtems_makedir)/Templates

dist_rtems_make_Templates_DATA = Templates/Makefile.dir \
    Templates/Makefile.leaf Templates/Makefile.lib

EXTRA_DIST += compilers/gcc-no_bsp.cfg \
    compilers/gcc-target-default.cfg

rtems_make_customdir = $(rtems_makedir)/custom

dist_rtems_make_custom_DATA = custom/default.cfg

EXTRA_DIST += custom/av5282.cfg
EXTRA_DIST += custom/avrtest.cfg
EXTRA_DIST += custom/bare.cfg
EXTRA_DIST += custom/bf537Stamp.cfg
EXTRA_DIST += custom/brs5l.cfg
EXTRA_DIST += custom/c3xsim.cfg
EXTRA_DIST += custom/c4xsim.cfg
EXTRA_DIST += custom/csb336.cfg
EXTRA_DIST += custom/csb337.cfg
EXTRA_DIST += custom/csb350.cfg
EXTRA_DIST += custom/csb360.cfg
EXTRA_DIST += custom/Cygwin-posix.cfg
EXTRA_DIST += custom/edb7312.cfg
EXTRA_DIST += custom/ep1a.cfg
EXTRA_DIST += custom/erc32.cfg
EXTRA_DIST += custom/eZKit533.cfg
EXTRA_DIST += custom/FreeBSD-posix.cfg
EXTRA_DIST += custom/gba.cfg
EXTRA_DIST += custom/gen5200.cfg
EXTRA_DIST += custom/gen68302.cfg
EXTRA_DIST += custom/gen68340.cfg
EXTRA_DIST += custom/gen68360_040.cfg
EXTRA_DIST += custom/gen68360.cfg
EXTRA_DIST += custom/gen83xx.cfg
EXTRA_DIST += custom/genmcf548x.cfg
EXTRA_DIST += custom/genmongoosev.cfg
EXTRA_DIST += custom/gensh1.cfg
EXTRA_DIST += custom/gensh2.cfg
EXTRA_DIST += custom/gensh4.cfg
EXTRA_DIST += custom/gp32.cfg
EXTRA_DIST += custom/h8sim.cfg
EXTRA_DIST += custom/h8sxsim.cfg
EXTRA_DIST += custom/haleakala.cfg
EXTRA_DIST += custom/hsc_cm01.cfg
EXTRA_DIST += custom/hurricane.cfg
EXTRA_DIST += custom/i386ex.cfg
EXTRA_DIST += custom/icecube.cfg
EXTRA_DIST += custom/idp.cfg
EXTRA_DIST += custom/jmr3904.cfg
EXTRA_DIST += custom/leon2.cfg
EXTRA_DIST += custom/leon3.cfg
EXTRA_DIST += custom/Linux-posix.cfg
EXTRA_DIST += custom/lm32_evr.cfg
EXTRA_DIST += custom/lpc2478.cfg
EXTRA_DIST += custom/m32csim.cfg
EXTRA_DIST += custom/m32rsim.cfg
EXTRA_DIST += custom/m5484FireEngine.cfg
EXTRA_DIST += custom/mbx821_001.cfg
EXTRA_DIST += custom/mbx821_002b.cfg
EXTRA_DIST += custom/mbx821_002.cfg
EXTRA_DIST += custom/mbx860_001b.cfg
EXTRA_DIST += custom/mbx860_002.cfg
EXTRA_DIST += custom/mbx860_005b.cfg
EXTRA_DIST += custom/mbx860_1b.cfg
EXTRA_DIST += custom/mbx8xx.cfg
EXTRA_DIST += custom/mcf5206elite.cfg
EXTRA_DIST += custom/mcf52235.cfg
EXTRA_DIST += custom/mcf5235.cfg
EXTRA_DIST += custom/mcf5329.cfg
EXTRA_DIST += custom/mcp750.cfg
EXTRA_DIST += custom/mpc5566evb.cfg
EXTRA_DIST += custom/mpc55xx.cfg
EXTRA_DIST += custom/mpc8260ads.cfg
EXTRA_DIST += custom/mpc8313erdb.cfg
EXTRA_DIST += custom/mpc8349eamds.cfg
EXTRA_DIST += custom/mrm332.cfg
EXTRA_DIST += custom/mtx603e.cfg
EXTRA_DIST += custom/mvme136.cfg
EXTRA_DIST += custom/mvme147.cfg
EXTRA_DIST += custom/mvme147s.cfg
EXTRA_DIST += custom/mvme162.cfg
EXTRA_DIST += custom/mvme162lx.cfg
EXTRA_DIST += custom/mvme167.cfg
EXTRA_DIST += custom/mvme2100.cfg
EXTRA_DIST += custom/mvme2307.cfg
EXTRA_DIST += custom/mvme3100.cfg
EXTRA_DIST += custom/mvme5500.cfg
EXTRA_DIST += custom/nds.cfg
EXTRA_DIST += custom/nios2_iss.cfg
EXTRA_DIST += custom/no_bsp.cfg
EXTRA_DIST += custom/ods68302.cfg
EXTRA_DIST += custom/pc386.cfg
EXTRA_DIST += custom/pc386dx.cfg
EXTRA_DIST += custom/pc486.cfg
EXTRA_DIST += custom/pc586.cfg
EXTRA_DIST += custom/pc686.cfg
EXTRA_DIST += custom/pgh360.cfg
EXTRA_DIST += custom/pghplus.cfg
EXTRA_DIST += custom/pm520_cr825.cfg
EXTRA_DIST += custom/pm520_ze30.cfg
EXTRA_DIST += custom/posix.cfg
EXTRA_DIST += custom/psim.cfg
EXTRA_DIST += custom/rbtx4925.cfg
EXTRA_DIST += custom/rbtx4938.cfg
EXTRA_DIST += custom/rtl22xx.cfg
EXTRA_DIST += custom/rtl22xx_t.cfg
EXTRA_DIST += custom/score603e.cfg
EXTRA_DIST += custom/sim68000.cfg
EXTRA_DIST += custom/simcpu32.cfg
EXTRA_DIST += custom/simsh1.cfg
EXTRA_DIST += custom/simsh2.cfg
EXTRA_DIST += custom/simsh4.cfg
EXTRA_DIST += custom/sis.cfg
EXTRA_DIST += custom/smdk2410.cfg
EXTRA_DIST += custom/Solaris-posix.cfg
EXTRA_DIST += custom/ss555.cfg
EXTRA_DIST += custom/tqm8xx.cfg
EXTRA_DIST += custom/tqm8xx_stk8xx.cfg
EXTRA_DIST += custom/ts_386ex.cfg
EXTRA_DIST += custom/uC5282.cfg
EXTRA_DIST += custom/virtex.cfg

include $(top_srcdir)/automake/host.am
