##
## $Id$
##

ACLOCAL_AMFLAGS = -I aclocal

DISTCLEANFILES =
CLEANFILES =

include_HEADERS = support/include/tmacros.h support/include/buffer_test_io.h

SUBDIRS = @subdirs@

EXTRA_DIST = PROBLEMS

include $(srcdir)/preinstall.am

include $(top_srcdir)/automake/subdirs.am
include $(top_srcdir)/automake/local.am
