ACLOCAL_AMFLAGS = -I aclocal

DISTCLEANFILES =
CLEANFILES =

noinst_HEADERS =
noinst_HEADERS += support/include/buffer_test_io.h
noinst_HEADERS += support/include/test_support.h
noinst_HEADERS += support/include/tmacros.h
noinst_HEADERS += support/include/pritime.h
noinst_HEADERS += support/include/primode.h
noinst_HEADERS += support/include/tmtests_empty_function.h

SUBDIRS = @subdirs@

EXTRA_DIST = PROBLEMS

include $(top_srcdir)/automake/subdirs.am
include $(top_srcdir)/automake/local.am
