ACLOCAL_AMFLAGS = -I aclocal

CLEANFILES =

noinst_HEADERS =
noinst_HEADERS += support/include/buffer_test_io.h
noinst_HEADERS += support/include/test_support.h
noinst_HEADERS += support/include/tmacros.h
noinst_HEADERS += support/include/pritime.h
noinst_HEADERS += support/include/primode.h
noinst_HEADERS += support/include/tmtests_empty_function.h

_SUBDIRS = @subdirs@


include $(top_srcdir)/automake/subdirs.am
